--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://github.com/RatuscaF/ratustele/tree/main/wwwindex.html">
+<meta http-equiv="refresh" content="0; url=https://repo.github.io/www/index.html">
