--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>mygame</title>
 </head>
 <body>
-	<script type="module" src="src/main.js"></script>
+	<script type="module" src="./src/main.js"></script>
 	<div id="joystick-container"></div>
 
 </body>
