--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <body>
 	<script type="module" src="src/main.js"></script>
 	<div id="joystick-container"></div>
-
+	<script type="module">
+		import kaboom from "https://unpkg.com/kaboom@3000/dist/kaboom.mjs"
+		kaboom()
+	</script>
 </body>
 </html>
