--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 		import kaboom from "https://unpkg.com/kaboom@3000/dist/kaboom.mjs"
 		kaboom()
 	</script>
+	<script type="module">
+		import kaboom from "https://unpkg.com/browse/nipplejs@0.10.1/dist/nipplejs.js"
+		
+	</script>
 </body>
 </html>
