--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	<div id="joystick-container"></div>
 	<script type="module">
 		import kaboom from "https://unpkg.com/kaboom@3000/dist/kaboom.mjs"
-		kaboom()
+		kaboom({
+			background: [135, 62, 132],
+		})
 	</script>
 	<script type="module">
 		import kaboom from "https://unpkg.com/browse/nipplejs@0.10.1/dist/nipplejs.js"
