--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		})
 	</script>
 	<script type="module">
-		import kaboom from "https://unpkg.com/browse/nipplejs@0.10.1/dist/nipplejs.js"
+		import nipplejs from "https://unpkg.com/browse/nipplejs@0.10.1/dist/nipplejs.js"
 		
 	</script>
 </body>
